<resources>
    <string name="app_name">Inventory-app</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="masuk">Masuk</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="daftar">Daftar</string>
    <string name="masukan_username">Masukan Username</string>
</resources>
